--- a/test.html
+++ b/test.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>Test</title>
+<meta name="description" content="">
+<meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body class="my-class">
 # You are reading the ".properties" entry.
